--- a/src/main/resources/fxml/config.fxml
+++ b/src/main/resources/fxml/config.fxml
@@ -1,91 +1,88 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ScrollPane?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.VBox?>
-
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" stylesheets="/css/main.css" xmlns="http://javafx.com/javafx/8.0.101" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.dsid.controllers.ConfigController">
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<BorderPane xmlns:fx="http://javafx.com/fxml/1" stylesheets="/css/main.css" xmlns="http://javafx.com/javafx/8.0.101"
+            fx:controller="com.dsid.controllers.ConfigController">
     <bottom>
-        <HBox alignment="CENTER" prefHeight="67.0" style="-fx-spacing: 100;" styleClass="dark" BorderPane.alignment="CENTER">
+        <HBox alignment="CENTER" prefHeight="67.0" style="-fx-spacing: 100;" styleClass="dark"
+              BorderPane.alignment="CENTER">
             <children>
                 <Button alignment="CENTER" mnemonicParsing="false" onAction="#save" text="Save">
                     <HBox.margin>
-                        <Insets />
+                        <Insets/>
                     </HBox.margin>
                 </Button>
-            <Button alignment="CENTER" layoutX="285.0" layoutY="28.0" mnemonicParsing="false" onAction="#addProperty" text="Add property" />
             </children>
         </HBox>
     </bottom>
-   <center>
-      <BorderPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
-         <center>
-            <ScrollPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
-               <content>
-                  <BorderPane prefHeight="400.0" prefWidth="580.0">
-                     <center>
-                        <HBox BorderPane.alignment="CENTER">
-                           <children>
-                              <VBox alignment="TOP_CENTER" prefHeight="200.0" prefWidth="300.0">
-                                 <children>
-                                    <Label text="ConnectionFactory class">
-                                       <VBox.margin>
-                                          <Insets top="20.0" />
-                                       </VBox.margin>
-                                    </Label>
-                                    <Label text="Queue IN">
-                                       <VBox.margin>
-                                          <Insets top="35.0" />
-                                       </VBox.margin>
-                                    </Label>
-                                    <Label text="Queue OUT">
-                                       <VBox.margin>
-                                          <Insets top="35.0" />
-                                       </VBox.margin>
-                                    </Label>
-                                 </children>
-                              </VBox>
-                              <VBox alignment="TOP_CENTER" prefHeight="200.0" prefWidth="200.0">
-                                 <children>
-                                    <TextField fx:id="connectionFactoryField">
-                                       <VBox.margin>
-                                          <Insets top="20.0" />
-                                       </VBox.margin>
-                                    </TextField>
-                                    <TextField fx:id="queueInField">
-                                       <VBox.margin>
-                                          <Insets top="20.0" />
-                                       </VBox.margin>
-                                    </TextField>
-                                    <TextField fx:id="queueOutField">
-                                       <VBox.margin>
-                                          <Insets top="20.0" />
-                                       </VBox.margin>
-                                    </TextField>
-                                 </children>
-                              </VBox>
-                           </children>
+    <center>
+        <BorderPane BorderPane.alignment="CENTER">
+            <center>
+                <BorderPane BorderPane.alignment="CENTER">
+                    <center>
+                        <HBox alignment="CENTER" BorderPane.alignment="CENTER">
+                            <children>
+                                <VBox alignment="TOP_CENTER">
+                                    <children>
+                                        <Label text="ConnectionFactory class">
+                                            <VBox.margin>
+                                                <Insets top="20.0"/>
+                                            </VBox.margin>
+                                        </Label>
+                                        <Label text="Queue IN">
+                                            <VBox.margin>
+                                                <Insets top="35.0"/>
+                                            </VBox.margin>
+                                        </Label>
+                                        <Label text="Queue OUT">
+                                            <VBox.margin>
+                                                <Insets top="35.0"/>
+                                            </VBox.margin>
+                                        </Label>
+                                    </children>
+                                    <HBox.margin>
+                                        <Insets right="50.0"/>
+                                    </HBox.margin>
+                                </VBox>
+                                <VBox alignment="TOP_CENTER">
+                                    <children>
+                                        <ComboBox fx:id="connectionFactoryBox" prefWidth="200.0">
+                                            <VBox.margin>
+                                                <Insets top="20.0"/>
+                                            </VBox.margin>
+                                        </ComboBox>
+                                        <TextField fx:id="queueInField">
+                                            <VBox.margin>
+                                                <Insets top="20.0"/>
+                                            </VBox.margin>
+                                        </TextField>
+                                        <TextField fx:id="queueOutField">
+                                            <VBox.margin>
+                                                <Insets top="20.0"/>
+                                            </VBox.margin>
+                                        </TextField>
+                                    </children>
+                                </VBox>
+                            </children>
                         </HBox>
-                     </center>
-                     <bottom>
-                        <TableView fx:id="tableView" editable="true" prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
-                          <columns>
-                            <TableColumn fx:id="propertyColumn" minWidth="-1.0" prefWidth="274.0" text="Property" />
-                            <TableColumn id="valueColumn" fx:id="valueColumn" prefWidth="323.0" text="Value" />
-                          </columns>
+                    </center>
+                    <bottom>
+                        <TableView fx:id="tableView" editable="true" BorderPane.alignment="CENTER">
+                            <columns>
+                                <TableColumn fx:id="propertyColumn" maxWidth="1.7976931348623157E308" minWidth="300.0"
+                                             prefWidth="-1.0" text="Property"/>
+                                <TableColumn id="valueColumn" fx:id="valueColumn" maxWidth="1.7976931348623157E308"
+                                             minWidth="300.0" prefWidth="-1.0" text="Value"/>
+                            </columns>
+                            <BorderPane.margin>
+                                <Insets top="20.0"/>
+                            </BorderPane.margin>
                         </TableView>
-                     </bottom>
-                  </BorderPane>
-               </content>
-            </ScrollPane>
-         </center>
-      </BorderPane>
-   </center>
+                    </bottom>
+                </BorderPane>
+            </center>
+        </BorderPane>
+    </center>
 </BorderPane>
